# kde-plasma-wayland

./: .gitignore  ARCH-REINSTALL.md  KDE-Customization-TODO.md  KDE-Display-Techs.md  KDE-Unresolved-Issues.md  browser-wayland-scroll-fix.md  debug-submenu.qml  desktop-shortcuts-guide.md  make-folder-shortcut.sh  memory.md  package-lock.json  package.json
.kilo/plans/: 1780359407148-misty-otter.md  1780359679973-misty-nebula.md  1780376599235-sunny-star.md  jumplist-fixes.md  vscode-recent-places.md
config/: kwinrulesrc
config/systemd/user/: hubstaff.service
kde-kwin/: CMakeLists.txt
kde-kwin/autotests/integration/: activation_test.cpp  dont_crash_aurorae_destroy_deco.cpp  dont_crash_empty_deco.cpp  dont_crash_reinitialize_compositor.cpp  fakeinput_test.cpp  generic_scene_opengl_test.cpp  globalshortcuts_test.cpp  tabbox_test.cpp  topleveldrag_test.cpp  window_rules_test.cpp  x11_window_test.cpp  xwayland_dnd_test.cpp  xwayland_selection_test.cpp
kde-kwin/po/ar/: kcmkwincommon.po  kcmkwinscreenedges.po
kde-kwin/po/ast/: kcmkwincommon.po
kde-kwin/po/az/: kcmkwincommon.po
kde-kwin/po/be/: kcmkwincommon.po
kde-kwin/po/bg/: kcmkwincommon.po
kde-kwin/po/ca/: kcmkwincommon.po
kde-kwin/po/ca@valencia/: kcmkwincommon.po  kcmkwinscreenedges.po
kde-kwin/po/cs/: kcmkwincommon.po
kde-kwin/po/da/: kcmkwincommon.po
kde-kwin/po/de/: kcmkwincommon.po
kde-kwin/po/en_GB/: kcmkwincommon.po
kde-kwin/po/eo/: kcmkwincommon.po
kde-kwin/po/es/: kcmkwincommon.po
kde-kwin/po/et/: kcmkwincommon.po
kde-kwin/po/eu/: kcmkwincommon.po
kde-kwin/po/fi/: kcmkwincommon.po
kde-kwin/po/fr/: kcmkwincommon.po
kde-kwin/po/ga/: kcmkwincommon.po
kde-kwin/po/gl/: kcmkwincommon.po
kde-kwin/po/he/: kcmkwincommon.po
kde-kwin/po/hi/: kcmkwincommon.po
kde-kwin/po/hu/: kcm_kwin_virtualdesktops.po  kcm_kwintabbox.po  kcmkwincommon.po
kde-kwin/po/ia/: kcmkwincommon.po
kde-kwin/po/id/: kcmkwincommon.po
kde-kwin/po/is/: kcmkwincommon.po
kde-kwin/po/it/: kcmkwincommon.po
kde-kwin/po/ja/: kcmkwincommon.po
kde-kwin/po/ka/: kcmkwincommon.po
kde-kwin/po/lt/: kcmkwincommon.po
kde-kwin/po/lv/: kcmkwincommon.po
kde-kwin/po/ml/: kcmkwincommon.po
kde-kwin/po/nb/: kcm_kwin_virtualdesktops.po  kcm_kwintabbox.po  kcmkwincommon.po
kde-kwin/po/nl/: kcmkwincommon.po
kde-kwin/po/nn/: kcm_animations.po  kcm_kwin_virtualdesktops.po  kcm_kwintabbox.po  kcmkwincommon.po
kde-kwin/po/pa/: kcmkwincommon.po
kde-kwin/po/pl/: kcmkwincommon.po
kde-kwin/po/pt/: kcmkwincommon.po
kde-kwin/po/pt_BR/: kcm_kwin_virtualdesktops.po  kcmkwincommon.po
kde-kwin/po/ro/: kcmkwincommon.po
kde-kwin/po/ru/: kcm_kwin_virtualdesktops.po  kcm_kwintabbox.po  kcmkwincommon.po
kde-kwin/po/sa/: kcmkwincommon.po
kde-kwin/po/se/: kcm_kwin_virtualdesktops.po  kcmkwincommon.po
kde-kwin/po/sk/: kcmkwincommon.po
kde-kwin/po/sl/: kcmkwincommon.po
kde-kwin/po/sv/: kcm_kwin_virtualdesktops.po  kcm_kwintabbox.po  kcmkwincommon.po
kde-kwin/po/ta/: kcmkwincommon.po
kde-kwin/po/tg/: kcmkwincommon.po
kde-kwin/po/th/: kcmkwincommon.po
kde-kwin/po/tr/: kcmkwincommon.po
kde-kwin/po/ug/: kcm_kwin_virtualdesktops.po  kcm_kwintabbox.po
kde-kwin/po/uk/: kcmkwincommon.po
kde-kwin/src/: activation.cpp  compositor.cpp  globalshortcuts.cpp  globalshortcuts.h  input.cpp  kwin.notifyrc  main.h  placement.cpp  wayland_server.cpp  window.cpp
kde-plasma-desktop/: CMakeLists.txt
kde-plasma-desktop/kconf_update/: 50-krunner-activate-typing.sh  50-krunner-activate-typing.upd
kde-plasma-workspace/klipper/: CMakeLists.txt
kde-plasma-workspace/ksmserver/: legacy.cpp
kde-plasma-workspace/libklookandfeel/: klookandfeelmanifest.cpp
kde-plasma-workspace/libkworkspace/: outputorderwatcher.cpp  outputorderwatcher.h
kde-plasma-workspace/shell/: screenpool.cpp  shellcorona.cpp
patches/: dolphin-copy-location-multiselection.patch  eas-4-tbsync-fix-allday-dates.patch  kdeplasma-addons-cube-flip-fix.patch  plasma-desktop-copy-location.patch  plasma-desktop-folder-link-emblem.patch  plasma-framework-secondary-action.patch
scripts/: add-calendar-alarms.py  clipboard-image-bridge.sh  code-jumplist-manager.py  convert-symlinks-to-desktop.sh  create-virtual-desktop.sh  diagnose-kwin-shortcuts.sh  fix-boot-entry.sh  install-arch-omen15.sh  install-custom-kwin.sh  install-servicemenu.sh  open-with-code-wrapper.sh  open-with-code.c  open-with-code.desktop  open-with-code.sh  post-install-setup.sh  push-desktop-repos.sh  remove-virtual-desktop.sh  restore-after-archinstall.sh  separate-arch-esp.sh  setup-user-env.sh  uninstall-servicemenu.sh
scripts/hubstaff/: hubstaff-launcher.sh  hubstaff-settings-manager.py
scripts/kwin-virtualdesktop/: metadata.json
vscode-recent-places/: .vscodeignore  README.md  package.json  tsconfig.json
vscode-recent-places/src/: commands.ts  extension.ts  recentPlacesManager.ts  recentPlacesTreeProvider.ts  types.ts
wayland/: .editorconfig  .git-blame-ignore-revs  meson.build  meson_options.txt
wayland-protocols/: .gitlab-ci.yml  README.md  meson.build
wayland-protocols/.gitlab-ci/: debian-install.sh
wayland-protocols/stable/linux-dmabuf/: linux-dmabuf-v1.xml
wayland-protocols/tests/: meson.build
wayland/cursor/: wayland-cursor.c  xcursor.c
wayland/doc/: meson.build
wayland/doc/book/: book.toml  meson.build
wayland/doc/book/src/: Architecture.md  Color.md  Compositors.md  Content_Updates.md  Foreword.md  Introduction.md  Message_XML.md  Protocol.md  SUMMARY.md  Xwayland.md
wayland/doc/publican/: Client.xml  Foreword.xml  Wayland.xml  meson.build
wayland/doc/publican/html/css/: common.css  meson.build
wayland/doc/publican/html/images/: meson.build
wayland/doc/publican/xsl/: doxygen-to-publican.xsl  protocol-to-docbook.xsl
wayland/protocol/: wayland.xml
wayland/src/: connection.c  meson.build  scanner.c  wayland-client-core.h  wayland-client.c  wayland-private.h  wayland-server-core.h  wayland-server.c  wayland-util.c
wayland/tests/: display-test.c  event-loop-test.c  queue-test.c  test-compositor.c  test-compositor.h
(+257 files in other folders)
