srcs = files(
	'src/Protocol.md',
	'src/Foreword.md',
	'src/Xwayland.md',
	'src/SUMMARY.md',
	'src/Content_Updates.md',
	'src/Color.md',
	'src/Message_XML.md',
	'src/Architecture.md',
	'src/Introduction.md',
	'src/images/content-updates/sync-to-desync-subsurf-3.png',
	'src/images/content-updates/sync-subsurf-case2-2.png',
	'src/images/content-updates/simple-synchronized-state-4.png',
	'src/images/content-updates/sync-subsurf-case2-3.png',
	'src/images/content-updates/sync-to-desync-transition-2.png',
	'src/images/content-updates/simple-desynchronized-state-4.png',
	'src/images/content-updates/simple-synchronized-state-3.png',
	'src/images/content-updates/simple-synchronized-state-1.png',
	'src/images/content-updates/sync-subsurf-case1-4.png',
	'src/images/content-updates/sync-to-desync-subsurf-1.png',
	'src/images/content-updates/simple-desynchronized-state-1.png',
	'src/images/content-updates/simple-desynchronized-state-3.png',
	'src/images/content-updates/simple-desynchronized-state-6.png',
	'src/images/content-updates/sync-subsurf-case1-2.png',
	'src/images/content-updates/sync-subsurf-case1-1.png',
	'src/images/content-updates/simple-synchronized-state-5.png',
	'src/images/content-updates/simple-synchronized-state-2.png',
	'src/images/content-updates/simple-desynchronized-state-2.png',
	'src/images/content-updates/content-update-legend.png',
	'src/images/content-updates/sync-to-desync-subsurf-2.png',
	'src/images/content-updates/sync-to-desync-transition-3.png',
	'src/images/content-updates/sync-subsurf-case2-1.png',
	'src/images/content-updates/sync-subsurf-case1-5.png',
	'src/images/content-updates/sync-subsurf-case1-3.png',
	'src/images/content-updates/simple-desynchronized-state-5.png',
	'src/images/content-updates/sync-to-desync-transition-1.png',
	'src/images/icon.svg',
	'src/images/x-architecture.png',
	'src/images/wayland.png',
	'src/images/wayland-architecture.png',
	'src/images/xwayland-architecture.png',
	'src/Compositors.md',
)

custom_target(
	'Wayland-book',
	command: [
		mdbook,
		'build',
		'-d', meson.current_build_dir() / 'book',
		meson.current_source_dir(),
	],
	depend_files: srcs,
	output: 'book',
	build_by_default: true,
	install: true,
	install_dir: publican_install_prefix,
)
